fix tweet button alignment

--- a/src/components/WelcomeModal/style.css
+++ b/src/components/WelcomeModal/style.css
@@ -55,3 +55,8 @@ html {
 .rec-pagination{
     
 }
+
+.welcome--tweet-span *{
+    display: inline;
+    position: relative;
+}
